[package]
name = "custom-tls"
version = "0.15.1"
authors = ["Joshua Maddux <jdmaddux@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Based on the rust-ls-mio example"
categories = ["network-programming", "cryptography"]

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
base64 = "0.10"
log = { version = "0.4.0", optional = true }
rustls = { path = "../../rustls" }
sct = "0.6"
webpki = "0.21.0"
ct-logs = "0.6"
docopt = "~1.0"
env_logger = "0.6"
mio = "0.6"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.0"
vecio = "0.1"
webpki-roots = "0.17.0"
redis = "0.11.0"
